Fix alignment of icons in views
This improves the alignment of icons by changing `vertical-align` to `text-bottom` in `.admin-wrapper` and keeping `top` in `.table-action-link`

A consisten style without having to override would be preferred, but that would require more significant changes.

--- a/app/javascript/flavours/polyam/styles/admin.scss
+++ b/app/javascript/flavours/polyam/styles/admin.scss
@@ -14,7 +14,7 @@ $content-width: 840px;
   .icon {
     width: 13px;
     height: 13px;
-    vertical-align: top;
+    vertical-align: text-bottom; // Polyam: `text-bottom` instead of `top` for better alignment
     margin: 3px 2px; // Polyam: 3px to simulate material padding
   }
 
